# ChessSperiamoSiaQuellaBuona

./: CMakeLists.txt  Note.txt  README.md  board.cpp  board.h  game.cpp  game.h  log.txt  out.txt  pezzo.cpp  pezzo.h  player.cpp  player.h  replay.cpp  scacchiera.cpp
include/: board.h  game.h  pezzo.h  player.h
src/: board.cpp  board.h  game.cpp  game.h  log.txt  pezzo.cpp  pezzo.h  player.cpp  replay.cpp  scacchiera.cpp
